@@ -228,6 +228,9 @@ $wgOptionalMessages = array(
 	'variantname-tg-cyrl',
 	'variantname-tg-latn',
 	'variantname-tg',
+	'variantname-ike-cans',
+	'variantname-ike-latn',
+	'variantname-iu',
 	'rc-change-size',
 	'resetpass_text',
 	'image_sample',
